--- a/Mail Man/Mail Man/App.xaml
+++ b/Mail Man/Mail Man/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="POST_MAIL.App"
+﻿<Application x:Class="Mail_Man.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:POST_MAIL"
+             xmlns:local="clr-namespace:Mail_Man"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
