--- a/Mail Man/Mail Man/Login.xaml
+++ b/Mail Man/Mail Man/Login.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="POST_MAIL.Login"
+﻿<Window x:Class="Mail_Man.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:POST_MAIL"
+        xmlns:local="clr-namespace:Mail_Man"
         mc:Ignorable="d"
         Title="Login" Height="450" Width="800" Background="#FF181615" WindowStyle="None">
     <Grid>
@@ -11,7 +11,7 @@
         <Grid Margin="252,101,252,101" Background="#FF1A1A1A">
             <PasswordBox Margin="68,135,68,88" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White"/>
             <TextBlock HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="Welcome" VerticalAlignment="Top" Foreground="White" Height="27" Width="132" FontWeight="Bold" FontFamily="Arial Black" FontSize="24"/>
-            <Button Content="Log In" HorizontalAlignment="Center" Margin="0,184,0,0" VerticalAlignment="Top" Height="30" Width="160" FontFamily="Microsoft YaHei UI" FontSize="14" BorderBrush="#FFFF7B00" Foreground="White">
+            <Button Content="Log In" HorizontalAlignment="Center" Margin="0,184,0,0" VerticalAlignment="Top" Height="30" Width="160" FontFamily="Microsoft YaHei UI" FontSize="14" BorderBrush="#FFFF7B00" Foreground="White" Click="Button_Click">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFB52121"/>
