--- a/Mail Man/Mail Man/MainWindow.xaml
+++ b/Mail Man/Mail Man/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="POST_MAIL.MainWindow"
+﻿<Window x:Class="Mail_Man.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:POST_MAIL"
+        xmlns:local="clr-namespace:Mail_Man"
         mc:Ignorable="d"
         Title="Mail Man" Height="600" Width="1100" ResizeMode="NoResize" WindowStyle="None">
     <Grid Background="#FF1A1A1A">
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="200*"/>
             <ColumnDefinition Width="900*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Home" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615"/>
+        <Button Content="Home" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615" Click="Button_Click_1"/>
         <Button Content="registration" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Top" Height="62" Width="180" Click="Button_Click_1" Foreground="#FFFF7B00" Background="#FF181615" FontSize="20" FontFamily="Arial Rounded MT Bold" BorderBrush="#FF181615" FontWeight="Bold"/>
         <Button Content="order" HorizontalAlignment="Center" Margin="0,190,0,0" VerticalAlignment="Top" Height="55" Width="180" Click="Button_Click_1" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FF181615" FontSize="20" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
         <Button Content="Report of orders" HorizontalAlignment="Center" VerticalAlignment="Center" Height="69" Width="180" Click="Button_Click_1" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="#FF181615" FontSize="14" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
@@ -28,7 +28,4 @@
 
     </Grid>
 </Window>
-
-
-
 
