--- a/Mail Man/Mail Man/SignUp.xaml
+++ b/Mail Man/Mail Man/SignUp.xaml
@@ -5,8 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mail_Man"
         mc:Ignorable="d"
-        Title="SignUp" Height="450" Width="800">
+        Title="SignUp" Height="450" Width="800" Background="#FF181615" WindowStyle="None">
     <Grid>
-        
+        <Grid Margin="232,10,232,10" Background="#FF1A1A1A">
+            <TextBox x:Name="tbName" HorizontalAlignment="Center" Margin="0,31,0,0" TextWrapping="Wrap" Text="Name and Family name" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="27"/>
+            <TextBox x:Name="tbID" HorizontalAlignment="Center" Margin="0,78,0,0" TextWrapping="Wrap" Text="PersonaID" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="27"/>
+            <TextBox x:Name="tbUsername" HorizontalAlignment="Center" Margin="0,132,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="172" TextChanged="TextBox_TextChanged" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="29"/>
+            <TextBox x:Name="tbEmail" HorizontalAlignment="Center" Margin="0,184,0,0" TextWrapping="Wrap" Text="Email" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="31"/>
+            <PasswordBox x:Name="Passbox" HorizontalAlignment="Center" Margin="0,233,0,0" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="29"/>
+            <PasswordBox x:Name="AgainPassbox" HorizontalAlignment="Center" Margin="0,286,0,0" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="30"/>
+            <Button x:Name="btnSignUp" Content="Log In" HorizontalAlignment="Center" Margin="0,348,0,0" VerticalAlignment="Top" Height="37" Width="218" FontFamily="Microsoft YaHei UI" FontSize="14" BorderBrush="#FFFF7B00" Foreground="White" Click="btnSignUp_Click" >
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="10"/>
+                    </Style>
+                </Button.Resources>
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFB52121"/>
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+        </Grid>
+        <TextBlock HorizontalAlignment="Center" Margin="0,417,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/><Run/></TextBlock>
+
     </Grid>
 </Window>
