--- a/Mail Man/Mail Man/signupClient.xaml
+++ b/Mail Man/Mail Man/signupClient.xaml
@@ -14,9 +14,9 @@
             <Label x:Name="lblID" HorizontalAlignment="Center" Margin="0,144,0,0" FontSize="10" VerticalAlignment="Top" Width="172" Foreground="Red" Height="30" HorizontalContentAlignment="Center"/>
             <Label x:Name="lblEmail" HorizontalAlignment="Center" Margin="0,224,0,0" FontSize="10" VerticalAlignment="Top" Width="172" Foreground="Red" Height="30" HorizontalContentAlignment="Center"/>
             <Label x:Name="lblPhonenumber" HorizontalAlignment="Center" Margin="0,291,0,0" FontSize="10" VerticalAlignment="Top" Width="172" Foreground="Red" Height="30" HorizontalContentAlignment="Center"/>
-            <TextBox x:Name="tbID" HorizontalAlignment="Center" Margin="0,117,0,0" TextWrapping="Wrap" Text="PersonaID" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="27" TextChanged="tbID_TextChanged"/>
+            <TextBox x:Name="tbID" HorizontalAlignment="Center" Margin="0,117,0,0" TextWrapping="Wrap" Text="SSN" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="27" TextChanged="tbID_TextChanged"/>
             <TextBox x:Name="tbEmail" HorizontalAlignment="Center" Margin="0,188,0,0" TextWrapping="Wrap" Text="Email" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="31" TextChanged="tbEmail_TextChanged"/>
-            <TextBox x:Name="tb_phonenumber" HorizontalAlignment="Center" Margin="0,260,0,0" TextWrapping="Wrap" Text="Phone Number" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="31" TextChanged="tbEmail_TextChanged"/>
+            <TextBox x:Name="tb_phonenumber" HorizontalAlignment="Center" Margin="0,260,0,0" TextWrapping="Wrap" Text="Phone Number" VerticalAlignment="Top" Width="172" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Height="31" TextChanged="tb_phonenumber_TextChanged"/>
             <Button x:Name="btnSignUp" Content="Signup" HorizontalAlignment="Center" Margin="0,348,0,0" VerticalAlignment="Top" Height="37" Width="218" FontFamily="Microsoft YaHei UI" FontSize="14" BorderBrush="#FFFF7B00" Foreground="White" Click="btnSignUp_Click" >
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
