--- a/Mail Man/Mail Man/ClientMenu.xaml
+++ b/Mail Man/Mail Man/ClientMenu.xaml
@@ -16,5 +16,78 @@
         <Button x:Name="btn_change_UserPass" Content="Change Username&#xD;&#xA;or Password" HorizontalAlignment="Left" Margin="10,355,0,0" VerticalAlignment="Top" Height="88" Width="190" Foreground="#FFFF7B00" FontSize="18" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" Background="#FF181615" BorderBrush="#FF181615"/>
 
 
+        <Grid x:Name="grid_reportOfOrders" Margin="205,10,0,-10" Visibility="Collapsed">
+            <TextBlock x:Name="txtblock_PersonalId" HorizontalAlignment="Left" Margin="56,60,0,0" TextWrapping="Wrap" Text="Personal ID" VerticalAlignment="Top" Height="36" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"/>
+            <TextBlock x:Name="txtblock_PersonalId_Copy" HorizontalAlignment="Left" Margin="56,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Package Type"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_PersonalId_Copy1" HorizontalAlignment="Left" Margin="56,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Price Paid"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_PersonalId_Copy2" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_PersonalId_Copy3" HorizontalAlignment="Left" Margin="56,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Post Type"/><LineBreak/><Run/></TextBlock>
+            <Button Content="Search&#xD;&#xA;" Margin="597,498,88,54" Background="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="36" FontFamily="Bahnschrift Condensed"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,232,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <Grid Height="100" Width="100"/>
+        </Grid>
+        <Grid x:Name="grid_showinformation" Margin="205,0,0,0">
+            <TextBox HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="291" Height="38" BorderBrush="#FFFF7B00" Background="Black"/>
+            <Button Content="Show" HorizontalAlignment="Left" Margin="448,86,0,0" VerticalAlignment="Top" Height="38" Width="142" Foreground="#FFFF7B00" Background="#FF1A1A1A" BorderBrush="#FFFF7B00"/>
+            <TextBlock HorizontalAlignment="Left" Margin="45,36,0,0" TextWrapping="Wrap" Text="Order ID" VerticalAlignment="Top" Height="38" Width="143" Foreground="#FF3C8223" FontSize="24"/>
+
+        </Grid>
+        <Grid x:Name="grid_wallet" Margin="205,0,0,0" Visibility="Collapsed">
+            <TextBlock x:Name="wallet_txtblock" HorizontalAlignment="Left" Margin="26,26,0,506" TextWrapping="Wrap" Width="158" FontSize="36">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="White"/>
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground><Run Text="Wallet"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="totalMoney_txtblock" HorizontalAlignment="Left" Margin="173,525,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="280" Foreground="White" Background="Black"/>
+            <TextBlock x:Name="TOTALmoney_txtblock" HorizontalAlignment="Left" Margin="10,525,0,0" TextWrapping="Wrap" Text="TOTAL Money" VerticalAlignment="Top" Foreground="#FFFF7B00" Height="46" Width="158" FontSize="22"/>
+            <Rectangle HorizontalAlignment="Left" Height="580" Margin="470,0,0,0" VerticalAlignment="Center" Width="390" Stroke="White"/>
+            <TextBlock HorizontalAlignment="Left" Margin="490,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="52" Width="307" FontSize="36">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="White" Offset="1"/>
+                        <GradientStop Color="#FFFF7B00" Offset="0"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground><Run Text="Charge Account"/><LineBreak/><Run/></TextBlock>
+            <TextBox x:Name="cardNumber_txt" HorizontalAlignment="Left" Margin="500,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="34" TextChanged="TextBox_TextChanged"/>
+            <TextBox x:Name="expiration_txt" HorizontalAlignment="Left" Margin="500,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="34" TextChanged="TextBox_TextChanged_1"/>
+            <TextBox x:Name="cvv2_txt" HorizontalAlignment="Left" Margin="500,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="35" RenderTransformOrigin="0.491,0.025"/>
+            <TextBox x:Name="amount_txt" HorizontalAlignment="Left" Margin="500,399,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="44" TextChanged="TextBox_TextChanged_2"/>
+            <Button x:Name="pay_btn" Content="Pay" HorizontalAlignment="Left" Margin="551,499,0,0" VerticalAlignment="Top" Height="59" Width="228" Click="Button_Click" FontSize="24" Foreground="White" BorderBrush="#FF1A1A1A">
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFB52121"/>
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+            <TextBlock x:Name="card_txtblock" HorizontalAlignment="Left" Margin="500,91,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19"><Run Text="Card Number"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="card_txtblock_Copy" HorizontalAlignment="Left" Margin="500,173,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19" Text="Expiration Date"/>
+            <TextBlock x:Name="card_txtblock_Copy1" HorizontalAlignment="Left" Margin="500,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19" Text="CVV2"/>
+            <TextBlock x:Name="card_txtblock_Copy2" HorizontalAlignment="Left" Margin="500,367,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19" Text="Amount"/>
+        </Grid>
+        <Grid x:Name="grid_changeinformation" Margin="205,0,0,0" Visibility="Collapsed">
+            <TextBlock HorizontalAlignment="Left" Margin="30,46,0,0" TextWrapping="Wrap" Text="Username : " VerticalAlignment="Top" Foreground="White" Height="38" Width="176" FontSize="24"/>
+            <TextBlock HorizontalAlignment="Left" Margin="30,200,0,0" TextWrapping="Wrap" Text="Password : " VerticalAlignment="Top" Foreground="White" Height="38" Width="176" FontSize="24"/>
+            <Button Content="change" HorizontalAlignment="Left" Margin="660,508,0,0" VerticalAlignment="Top" Height="46" Width="188" FontSize="18">
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FFEF1212"/>
+                        <GradientStop Color="#FFFF7B00" Offset="1"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
+            <TextBox HorizontalAlignment="Left" Margin="394,36,0,0" TextWrapping="Wrap" Text="&#xD;&#xA;" VerticalAlignment="Top" Width="272" Height="58" Foreground="#FFFF7B00" Background="Black" BorderBrush="#FF1A1A1A"/>
+            <TextBox HorizontalAlignment="Left" Margin="394,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Height="56" TextChanged="TextBox_TextChanged_3" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="Black"/>
+
+        </Grid>
+
+
+
     </Grid>
 </Window>
