--- a/Mail Man/Mail Man/MainWindow.xaml
+++ b/Mail Man/Mail Man/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mail_Man"
         mc:Ignorable="d"
-        Title="Mail Man" Height="600" Width="1100" ResizeMode="NoResize" WindowStyle="None">
+        Title="Mail Man" Height="600" Width="1100" ResizeMode="NoResize">
     <Grid Background="#FF1A1A1A">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200*"/>
@@ -17,20 +17,8 @@
         <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Center" VerticalAlignment="Center" Height="69" Width="180" Click="Button_Click_1" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="#FF181615" FontSize="14" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
         <Button x:Name="btn_show_information" Content="Show information" HorizontalAlignment="Center" Margin="0,344,0,0" VerticalAlignment="Top" Height="68" Width="180" Click="Button_Click_1" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FF181615" FontSize="14" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
         <Border BorderBrush="#FF1B1818" BorderThickness="1" Background="#FF181615" Panel.ZIndex="-10"/>
-        <TextBlock HorizontalAlignment="Center" Margin="0,551,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/></TextBlock>
-        <Button Grid.Column="1" Content="X" HorizontalAlignment="Left" Margin="864,10,0,0" VerticalAlignment="Top" Click="Button_Click" Height="26" Width="26" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10"></Setter>
-                </Style>
-            </Button.Resources>
-        </Button>
-<<<<<<< HEAD
-        
+        <TextBlock HorizontalAlignment="Center" Margin="0,535,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/></TextBlock>
         <Grid x:Name="grid_checkuser" Grid.Column="1" Visibility="Collapsed">
-=======
-        <Grid x:Name="grid_checkuser" Grid.Column="1" Visibility="Visible">
->>>>>>> f38ef7019c84d8e67241c755acf33dde6fe944b8
             <TextBox HorizontalAlignment="Center" Margin="0,166,0,0" TextWrapping="Wrap" Text="National ID Code" VerticalAlignment="Top" Width="320" Height="41" Background="#FF1A1A1A" BorderBrush="#FFFF7B00" Foreground="White" Name ="tbUsername"/>
             <Button Content="Search" HorizontalAlignment="Center" Margin="0,257,0,0" VerticalAlignment="Top" Height="43" Width="200">
                 <Button.Background>
@@ -47,15 +35,42 @@
             </Button>
             <TextBlock HorizontalAlignment="Left" Margin="27,33,0,0" TextWrapping="Wrap" Text="Welcome to oredering page" VerticalAlignment="Top" Height="51" Width="350" Foreground="White" FontSize="24" FontWeight="Bold"/>
         </Grid>
-<<<<<<< HEAD
-        
-        <Grid x:Name="grid_ordering" Grid.Column="1">
-=======
-        <Grid x:Name="grid_ordering" Visibility="Collapsed" Grid.Column="1">
->>>>>>> f38ef7019c84d8e67241c755acf33dde6fe944b8
-            <TextBox HorizontalAlignment="Left" Margin="41,150,0,0" TextWrapping="Wrap" Text="Receiver address" VerticalAlignment="Top" Width="218" Height="31"/>
-            <TextBox HorizontalAlignment="Left" Margin="41,28,0,0" TextWrapping="Wrap" Text="Self address" VerticalAlignment="Top" Width="218" Height="31"/>
 
+        <Grid x:Name="grid_ordering" Grid.Column="1" Visibility="Collapsed">
+            <TextBox x:Name="recieveadress_txt" HorizontalAlignment="Left" Margin="587,61,0,0" TextWrapping="Wrap" Text="Receiver address" VerticalAlignment="Top" Width="218" Height="31" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" Background="#FF181615"/>
+            <TextBox x:Name="sendaddress_txt" HorizontalAlignment="Left" Margin="41,61,0,0" TextWrapping="Wrap" Text="Self address" VerticalAlignment="Top" Width="218" Height="31" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" Background="#FF181615"/>
+            <ComboBox x:Name="packagecontent_dropbox" HorizontalAlignment="Left" Margin="41,178,0,0" VerticalAlignment="Top" Width="218" IsDropDownOpen="True" SelectionChanged="ComboBox_SelectionChanged" Height="32" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" Background="#FF181615">
+                <CheckBox Content="Object"/>
+                <CheckBox Content="Document"/>
+                <CheckBox Content="breackable"/>
+            </ComboBox>
+            <CheckBox x:Name="expensive_checkbox" Content="Expensive" HorizontalAlignment="Left" Margin="587,298,0,0" VerticalAlignment="Top" Height="24" Width="218" Foreground="#FFFF7B00" FontSize="16" IsChecked="False" Cursor="" BorderBrush="#FFFF7B00"/>
+            <TextBox x:Name="weight_txt" HorizontalAlignment="Left" Margin="587,182,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="218" Height="28" Foreground="#FFFF7B00" BorderBrush="#FFFF7B00" Background="#FF181615"/>
+            <ComboBox x:Name="whichModel_dropbox" HorizontalAlignment="Left" Margin="41,292,0,0" VerticalAlignment="Top" Width="217" Height="30" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00" Background="#FF181615">
+                <CheckBox Content="usuall"/>
+                <CheckBox Content="VIP"/>
+            </ComboBox>
+            <TextBlock x:Name="showtotal_txtblock" HorizontalAlignment="Left" Margin="80,409,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="46" Width="179" Background="Black"/>
+            <TextBlock x:Name="total_txtblock" HorizontalAlignment="Left" Margin="10,416,0,0" TextWrapping="Wrap" Text="Total : " VerticalAlignment="Top" Height="29" Width="109" Foreground="#FF0B821D" FontSize="24"/>
+            <Button x:Name="calculation_btn" Content="Calculation" HorizontalAlignment="Left" Margin="41,507,0,0" VerticalAlignment="Top" Height="39" Width="218" Background="#FF181615" BorderBrush="#FFFF7B00" Foreground="#FFFF7B00"/>
+            <Button x:Name="submit_bin" Content="submit" HorizontalAlignment="Left" Margin="587,507,0,0" VerticalAlignment="Top" Height="39" Width="218" Background="#FFFF7B00" BorderBrush="#FF181615" Foreground="#FF181615" FontSize="18"/>
+
+        </Grid>
+
+
+        <Grid x:Name="grid_reportOfOrders" Margin="5,10,0,-10" Grid.Column="1" Visibility="Collapsed">
+            <TextBlock x:Name="txtblock_PersonalId" HorizontalAlignment="Left" Margin="56,60,0,0" TextWrapping="Wrap" Text="Personal ID" VerticalAlignment="Top" Height="36" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"/>
+            <TextBlock x:Name="txtblock_PersonalId_Copy" HorizontalAlignment="Left" Margin="56,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Package Type"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_PersonalId_Copy1" HorizontalAlignment="Left" Margin="56,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="170" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Price Paid"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_PersonalId_Copy2" HorizontalAlignment="Left" Margin="56,328,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Weigh"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="txtblock_PersonalId_Copy3" HorizontalAlignment="Left" Margin="56,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="132" Cursor="" Foreground="#FFFF7B00" FontSize="24"><Run Text="Post Type"/><LineBreak/><Run/></TextBlock>
+            <Button Content="Search&#xD;&#xA;" Margin="597,498,88,49" Background="#FFFF7B00" BorderBrush="#FFFF7B00" FontSize="30" FontFamily="Bahnschrift Condensed"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,232,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,416,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <TextBlock HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
+            <Grid Height="100" Width="100"/>
         </Grid>
 
     </Grid>
