--- a/Mail Man/Mail Man/ClientMenu.xaml
+++ b/Mail Man/Mail Man/ClientMenu.xaml
@@ -8,12 +8,12 @@
         Title="ClientMenu" Height="600" Width="1100" ResizeMode="NoResize">
     <Grid Background="#FF1A1A1A">
         <Border BorderBrush="#FF1B1818" BorderThickness="1" Background="#FF181615" Panel.ZIndex="-10" Margin="0,0,900,0"/>
-        <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615" Click="Button_Click_1"/>
-        <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Left" VerticalAlignment="Top" Height="69" Width="180" Click="Button_Click_1" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="#FF181615" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="Bold" Margin="10,101,0,0"/>
+        <Button x:Name="btn_home" Content="Home" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Height="72" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615" Click="btn_home_Click"/>
+        <Button x:Name="btn_report" Content="Report of orders" HorizontalAlignment="Left" VerticalAlignment="Top" Height="69" Width="180" Click="btn_report_Click" Foreground="#FFFF7B00" Background="#FF181615" BorderBrush="#FF181615" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="Bold" Margin="10,101,0,0"/>
         <TextBlock HorizontalAlignment="Left" Margin="50,542,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" FontFamily="MV Boli"><Run Text="Sobhan &amp; Kiarash"/><LineBreak/></TextBlock>
-        <Button x:Name="btn_show_information" Content="Show information" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Height="68" Width="180" Click="Button_Click_1" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FF181615" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
-        <Button x:Name="btn_wallert" Content="Wallet" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Height="52" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615"/>
-        <Button x:Name="btn_change_UserPass" Content="Change Username&#xD;&#xA;or Password" HorizontalAlignment="Left" Margin="10,355,0,0" VerticalAlignment="Top" Height="88" Width="190" Foreground="#FFFF7B00" FontSize="18" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" Background="#FF181615" BorderBrush="#FF181615"/>
+        <Button x:Name="btn_show_information" Content="Show information" HorizontalAlignment="Left" Margin="10,188,0,0" VerticalAlignment="Top" Height="68" Width="180" Click="btn_show_information_Click" Background="#FF181615" Foreground="#FFFF7B00" BorderBrush="#FF181615" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="Bold"/>
+        <Button x:Name="btn_wallert" Content="Wallet" HorizontalAlignment="Left" Click="btn_wallert_Click" Margin="10,0,0,0" VerticalAlignment="Center" Height="52" Width="180" Foreground="#FFFF7B00" FontSize="20" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" FontWeight="Bold" Background="#FF181615" BorderBrush="#FF181615"/>
+        <Button x:Name="btn_change_UserPass" Content="Change Username&#xD;&#xA;or Password" Click="btn_change_UserPass_Click" HorizontalAlignment="Left" Margin="10,355,0,0" VerticalAlignment="Top" Height="88" Width="190" Foreground="#FFFF7B00" FontSize="18" FontFamily="Arial Rounded MT Bold" RenderTransformOrigin="0.511,0.41" Background="#FF181615" BorderBrush="#FF181615"/>
 
 
         <Grid x:Name="grid_reportOfOrders" Margin="205,10,0,-10" Visibility="Collapsed">
@@ -30,8 +30,8 @@
             <TextBlock HorizontalAlignment="Center" Margin="0,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="42" Width="218" Background="Black" Foreground="#FFFF7B00" RenderTransformOrigin="0.653,1.083"/>
             <Grid Height="100" Width="100"/>
         </Grid>
-        <Grid x:Name="grid_showinformation" Margin="205,0,0,0">
-            <TextBox HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="291" Height="38" BorderBrush="#FFFF7B00" Background="Black"/>
+        <Grid x:Name="grid_showinformation" Margin="205,0,0,0" Visibility ="Collapsed">
+            <TextBox HorizontalAlignment="Left" Margin="45,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="291" Height="38" BorderBrush="#FFFF7B00" Background="Black"/>
             <Button Content="Show" HorizontalAlignment="Left" Margin="448,86,0,0" VerticalAlignment="Top" Height="38" Width="142" Foreground="#FFFF7B00" Background="#FF1A1A1A" BorderBrush="#FFFF7B00"/>
             <TextBlock HorizontalAlignment="Left" Margin="45,36,0,0" TextWrapping="Wrap" Text="Order ID" VerticalAlignment="Top" Height="38" Width="143" Foreground="#FF3C8223" FontSize="24"/>
 
@@ -44,7 +44,7 @@
                         <GradientStop Color="#FFFF7B00" Offset="1"/>
                     </LinearGradientBrush>
                 </TextBlock.Foreground><Run Text="Wallet"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="totalMoney_txtblock" HorizontalAlignment="Left" Margin="173,525,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="280" Foreground="White" Background="Black"/>
+            <TextBlock x:Name="totalMoney_txtblock" HorizontalAlignment="Left" Text="" TextAlignment="Center" FontSize="30" Margin="173,525,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="280" Foreground="White" Background="Black"/>
             <TextBlock x:Name="TOTALmoney_txtblock" HorizontalAlignment="Left" Margin="10,525,0,0" TextWrapping="Wrap" Text="TOTAL Money" VerticalAlignment="Top" Foreground="#FFFF7B00" Height="46" Width="158" FontSize="22"/>
             <Rectangle HorizontalAlignment="Left" Height="580" Margin="470,0,0,0" VerticalAlignment="Center" Width="390" Stroke="White"/>
             <TextBlock HorizontalAlignment="Left" Margin="490,24,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="52" Width="307" FontSize="36">
@@ -54,11 +54,11 @@
                         <GradientStop Color="#FFFF7B00" Offset="0"/>
                     </LinearGradientBrush>
                 </TextBlock.Foreground><Run Text="Charge Account"/><LineBreak/><Run/></TextBlock>
-            <TextBox x:Name="cardNumber_txt" HorizontalAlignment="Left" Margin="500,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="34" TextChanged="TextBox_TextChanged"/>
-            <TextBox x:Name="expiration_txt" HorizontalAlignment="Left" Margin="500,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="34" TextChanged="TextBox_TextChanged_1"/>
-            <TextBox x:Name="cvv2_txt" HorizontalAlignment="Left" Margin="500,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="35" RenderTransformOrigin="0.491,0.025"/>
-            <TextBox x:Name="amount_txt" HorizontalAlignment="Left" Margin="500,399,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="44" TextChanged="TextBox_TextChanged_2"/>
-            <Button x:Name="pay_btn" Content="Pay" HorizontalAlignment="Left" Margin="551,499,0,0" VerticalAlignment="Top" Height="59" Width="228" Click="Button_Click" FontSize="24" Foreground="White" BorderBrush="#FF1A1A1A">
+            <TextBox x:Name="cardNumber" HorizontalAlignment="Left" Margin="500,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="34" TextChanged="cardNumber_TextChanged"/>
+            <TextBox x:Name="expiration" HorizontalAlignment="Left" Margin="500,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="34" />
+            <TextBox x:Name="cvv2" HorizontalAlignment="Left" Margin="500,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="35" RenderTransformOrigin="0.491,0.025" TextChanged="cvv2_TextChanged"/>
+            <TextBox x:Name="amount" HorizontalAlignment="Left" Margin="500,399,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="316" Height="44" TextChanged="amount_TextChanged"/>
+            <Button x:Name="pay_btn" Content="Pay" HorizontalAlignment="Left" Margin="551,499,0,0" VerticalAlignment="Top" Height="59" Width="228" Click="pay_btn_Click" FontSize="24" Foreground="White" BorderBrush="#FF1A1A1A">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFB52121"/>
@@ -71,10 +71,10 @@
             <TextBlock x:Name="card_txtblock_Copy1" HorizontalAlignment="Left" Margin="500,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19" Text="CVV2"/>
             <TextBlock x:Name="card_txtblock_Copy2" HorizontalAlignment="Left" Margin="500,367,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="119" Foreground="#FF37FF00" Height="19" Text="Amount"/>
         </Grid>
-        <Grid x:Name="grid_changeinformation" Margin="205,0,0,0" Visibility="Collapsed">
+        <Grid x:Name="grid_changeinformation" Margin="205,0,0,0" Visibility="Visible">
             <TextBlock HorizontalAlignment="Left" Margin="30,46,0,0" TextWrapping="Wrap" Text="Username : " VerticalAlignment="Top" Foreground="White" Height="38" Width="176" FontSize="24"/>
             <TextBlock HorizontalAlignment="Left" Margin="30,200,0,0" TextWrapping="Wrap" Text="Password : " VerticalAlignment="Top" Foreground="White" Height="38" Width="176" FontSize="24"/>
-            <Button Content="change" HorizontalAlignment="Left" Margin="660,508,0,0" VerticalAlignment="Top" Height="46" Width="188" FontSize="18">
+            <Button x:Name="Save" Content="Save" HorizontalAlignment="Left" Click="Save_Click" Margin="660,508,0,0" VerticalAlignment="Top" Height="46" Width="188" FontSize="18">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="#FFEF1212"/>
@@ -82,8 +82,10 @@
                     </LinearGradientBrush>
                 </Button.Background>
             </Button>
-            <TextBox HorizontalAlignment="Left" Margin="394,36,0,0" TextWrapping="Wrap" Text="&#xD;&#xA;" VerticalAlignment="Top" Width="272" Height="58" Foreground="#FFFF7B00" Background="Black" BorderBrush="#FF1A1A1A"/>
-            <TextBox HorizontalAlignment="Left" Margin="394,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Height="56" TextChanged="TextBox_TextChanged_3" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="Black"/>
+            <TextBox x:Name="tbUsername" HorizontalAlignment="Left" Margin="394,36,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="272" Height="58" Foreground="#FFFF7B00" Background="Black" BorderBrush="#FF1A1A1A" TextChanged="tbusername_TextChanged"/>
+            <Label x:Name="lblUsername" HorizontalAlignment="Left" Margin="394,94,0,0" FontSize="18" VerticalAlignment="Top" Width="272" Foreground="Red" Height="58" HorizontalContentAlignment="Center"></Label>
+            <TextBox x:Name="Password" HorizontalAlignment="Left" Margin="394,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Height="56" Foreground="#FFFF7B00" BorderBrush="#FF1A1A1A" Background="Black" TextChanged="Password_TextChanged"/>
+            <Label x:Name="lblPassword" HorizontalAlignment="Left" Margin="394,258,0,0" FontSize="18" VerticalAlignment="Top" Width="272" Foreground="Red" Height="58" HorizontalContentAlignment="Center"></Label>
 
         </Grid>
 
